--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "rect with typescript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --open",
+    "prod": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,11 +19,27 @@
   },
   "homepage": "https://github.com/meylon7/jsonplaceholder#readme",
   "dependencies": {
+    "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/react": "^13.2.0",
+    "@types/antd": "^1.0.0",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^27.5.0",
+    "antd": "^4.20.2",
+    "axios": "^0.27.2",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "sass-loader": "^12.6.0",
+    "source-map-loader": "^3.0.1",
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-react": "^7.16.7",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "ts-loader": "^9.3.0",
