--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-router-dom": "^6.3.0",
     "sass-loader": "^12.6.0",
     "source-map-loader": "^3.0.1",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
@@ -42,6 +43,7 @@
     "@babel/preset-react": "^7.16.7",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "@types/styled-components": "^5.1.25",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
     "webpack": "^5.72.0",
